[d18c852109b9b51f663c12c543350b0b4cca09f5]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2322,7 +2322,7 @@ A API Split permite consultar o que uma loja tem a receber dentro de um interval
 <p><br />
 A API do Split permite que sejam lançados ajustes à crédito e à débito nas agendas dos Subordinados.</p>
 
-<p>Quando lançado um ajuste a Crédito para um Subordinado, automaticamente é lançado um ajuste a Débito para o Marketplace na mesma data, e vice-versa.</p>
+<p>Quando lançado um ajuste à Crédito para um Subordinado, automaticamente é lançado um ajuste à Débito para o Marketplace na mesma data, e vice-versa.</p>
 
 <p><strong>Request</strong></p>
 
