[7f933093b9e316bcdfe29a03bdb550830b3c9173]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/teste">Teste</a>
+                    <a href="https://developercielo.github.io/manual/teste">Teste</a>
                 </li>
             
             </ul>
