--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/teste">Teste</a>
+                    <a href="https://developercielo.github.io/tutorial/teste">Tutoriais</a>
                 </li>
             
             </ul>
