[dfeeb11a091973ada4c2d31c9f5b19bcaaf0546f]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/teste">Tutoriais</a>
+                    <a href="https://developercielo.github.io/tutorial/teste">Tutoriais00</a>
                 </li>
             
             </ul>
