[6c488adc09406082f21051e33000fd3c4e7e7670]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/teste">Tutoriais00</a>
+                    <a href="https://developercielo.github.io/manual/teste">Manual do Split 2</a>
                 </li>
             
             </ul>
