[452261f4d6ea2e0f066a668cc50a109e047fb24e]: Alteração de tabela
A tabela com alternativas para recursos removidos, na seção 'Desenvolva seu aplicativo para Cielo LIO', foi refeita em HTML para permitir a personalização do alinhamento e do tamanho das células.

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -560,9 +560,9 @@ Para a criação de um novo projeto no Android Studio, <a href="https://develope
 <table>
   <thead>
     <tr>
-      <th>Push-Notifications</th>
-      <th>Serviços de Localização (GPS)</th>
-      <th>Serviços de Mapas</th>
+      <th style="width:33%;">Push-Notifications</th>
+      <th style="width:33%;">Serviços de Localização (GPS)</th>
+      <th style="width:33%;">Serviços de Mapas</th>
     </tr>
   </thead>
   <tbody>
@@ -576,7 +576,7 @@ Para a criação de um novo projeto no Android Studio, <a href="https://develope
       <td><strong>Alternativa</strong>: Location Manager</td>
       <td><strong>Alternativa</strong>: MapBox</td>
     </tr>
-    <tr>
+    <tr style="vertical-align:top;">
       <td><strong>Descrição</strong>: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend. O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).</td>
       <td><strong>Descrição</strong>: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.</td>
       <td><strong>Descrição</strong>: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.</td>
