[6998d9e9eae00ed7076219faa8b6574369db93af]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/manual/teste.html
+++ b/manual/teste.html
@@ -3101,7 +3101,7 @@
       <td>Text</td>
       <td>14</td>
       <td>Yes</td>
-      <td>Possible values:&lt;UL&gt;&lt;LI&gt;AnalyseFirst&lt;/LI&gt;&lt;LI&gt;AuthorizeFirst&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Possible values:<br />AnalyseFirst<br />AuthorizeFirst&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3109,7 +3109,7 @@
       <td>Text</td>
       <td>9</td>
       <td>Yes</td>
-      <td>Flow criteria.<br />&lt;UL&gt;&lt;LI&gt;OnSuccess - on success of chosen sequence&lt;/LI&gt;&lt;LI&gt;Always - analyse independently the result of chosen sequence&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Flow criteria.<br />OnSuccess - on success of chosen sequence<br />Always - analyse independently the result of chosen sequence&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3197,7 +3197,7 @@
       <td>Text</td>
       <td>9</td>
       <td>No</td>
-      <td>Field that will evaluate the billing address and delivery to different cities, states or countries<br />&lt;UL&gt;&lt;LI&gt;Yes (In case of divergence between billing and delivery addresses, mark as low risk)&lt;/LI&gt;&lt;LI&gt;No (In case of divergence between billing and delivery addresses, mark as hight risk)&lt;/LI&gt;&lt;LI&gt;Off (Ignores risk analysis for divergent addresses)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Field that will evaluate the billing address and delivery to different cities, states or countries<br />Yes (In case of divergence between billing and delivery addresses, mark as low risk)<br />No (In case of divergence between billing and delivery addresses, mark as hight risk)<br />Off (Ignores risk analysis for divergent addresses)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3205,7 +3205,7 @@
       <td>Text</td>
       <td> </td>
       <td>No</td>
-      <td>Importance level of the e-mail and customer IP addresses for risk level<br />&lt;UL&gt;&lt;LI&gt;Low (low importance)&lt;/LI&gt;&lt;LI&gt;Normal (medium importace)&lt;/LI&gt;&lt;LI&gt;High (very important)&lt;/LI&gt;&lt;LI&gt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Importance level of the e-mail and customer IP addresses for risk level<br />Low (low importance)<br />Normal (medium importace)<br />High (very important)<br />Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3213,7 +3213,7 @@
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of tests performed on the customer’s data with applications received meaningless <br />&lt;UL&gt;&lt;LI&gt;Low (low importance)&lt;/LI&gt;&lt;LI&gt;Normal (medium importance)&lt;/LI&gt;&lt;LI&gt;High (very important)&lt;/LI&gt;&lt;LI&gt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Level of tests performed on the customer’s data with applications received meaningless <br />Low (low importance)<br />Normal (medium importance)<br />High (very important)<br />Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3221,7 +3221,7 @@
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Obscenity level of requests received<br />&lt;UL&gt;&lt;LI&gt;Low (low importance)&lt;/LI&gt;&lt;LI&gt;Normal (medium importance)&lt;/LI&gt;&lt;LI&gt;High (very important)&lt;/LI&gt;&lt;LI&gt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Obscenity level of requests received<br />Low (low importance)<br />Normal (medium importance)<br />High (very important)<br />Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3229,7 +3229,7 @@
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of testing carried out with phone numbers <br />&lt;UL&gt;&lt;LI&gt;Low (Low importance)&lt;/LI&gt;&lt;LI&gt;Normal (medium importance)&lt;/LI&gt;&lt;LI&gt;High (very important)&lt;/LI&gt;&lt;LI&gt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Level of testing carried out with phone numbers <br />Low (Low importance)<br />Normal (medium importance)<br />High (very important)<br />Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3269,7 +3269,7 @@
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Product risk level <br />&lt;UL&gt;&lt;LI&gt;Low (lowr risk)&lt;/LI&gt;&lt;LI&gt;Normal (medium risk)&lt;/LI&gt;&lt;LI&gt;High (hight risk)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Product risk level <br />Low (lowr risk)<br />Normal (medium risk)<br />High (hight risk)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3277,7 +3277,7 @@
       <td>Text</td>
       <td> </td>
       <td>No</td>
-      <td>Importance level of customer order per time of day <br />&lt;UL&gt;&lt;LI&gt;Low (lowr risk)&lt;/LI&gt;&lt;LI&gt;Normal (medium risk)&lt;/LI&gt;&lt;LI&gt;High (hight risk)&lt;/LI&gt;&lt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Importance level of customer order per time of day <br />Low (lowr risk)<br />Normal (medium risk)<br />High (hight risk)</td>
       <td> </td>
     </tr>
     <tr>
@@ -3285,7 +3285,7 @@
       <td>Text</td>
       <td> </td>
       <td>No</td>
-      <td>Product Type<br />&lt;UL&gt;&lt;LI&gt;AdultContent&lt;/LI&gt;&lt;LI&gt;Coupon&lt;/LI&gt;&lt;LI&gt;Default&lt;/LI&gt;&lt;LI&gt;EletronicGood&lt;/LI&gt;&lt;LI&gt;EletronicSoftware&lt;/LI&gt;&lt;LI&gt;GiftCertificate&lt;/LI&gt;&lt;LI&gt;HandlingOnly&lt;/LI&gt;&lt;LI&gt;Service&lt;/LI&gt;&lt;LI&gt;ShippingAndHandling&lt;/LI&gt;&lt;LI&gt;ShippingOnly&lt;/LI&gt;&lt;LI&gt;Subscription&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Product Type<br />AdultContent<br />Coupon<br />Default<br />EletronicGood<br />EletronicSoftware<br />GiftCertificate<br />HandlingOnly<br />Service<br />ShippingAndHandling<br />ShippingOnly<br />Subscription&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3293,7 +3293,7 @@
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Importance level of customer purchase frequency<br />&lt;UL&gt;&lt;LI&gt;Low (low relevance for last 15 minutes)&lt;/LI&gt;&lt;LI&gt;Normal (medium relevance for last 15 minutes)&lt;/LI&gt;&lt;LI&gt;High (hight relevance for last 15 minutes)&lt;/LI&gt;&lt;LI&gt;Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Importance level of customer purchase frequency<br />Low (low relevance for last 15 minutes)<br />Normal (medium relevance for last 15 minutes)<br />High (hight relevance for last 15 minutes)<br />Off (ignore this criteria)&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3325,7 +3325,7 @@
       <td>Text</td>
       <td> </td>
       <td>No</td>
-      <td>Passenger classification<br />&lt;UL&gt;&lt;LI&gt;Adult&lt;/LI&gt;&lt;LI&gt;Child&lt;/LI&gt;&lt;LI&gt;Infant&lt;/LI&gt;&lt;LI&gt;Youth&lt;/LI&gt;&lt;LI&gt;Student)&lt;/LI&gt;&lt;LI&gt;SeniorCitizen&lt;/LI&gt;&lt;LI&gt;Military&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Passenger classification<br />Adult<br />Child<br />Infant<br />Youth<br />Student)<br />SeniorCitizen<br />Military&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
@@ -3373,7 +3373,7 @@
       <td>Text</td>
       <td> </td>
       <td>No</td>
-      <td>Shippint type<br />&lt;UL&gt;&lt;LI&gt;SameDay&lt;/LI&gt;&lt;LI&gt;OneDay&lt;/LI&gt;&lt;LI&gt;TwoDay&lt;/LI&gt;&lt;LI&gt;ThreeDay&lt;/LI&gt;&lt;LI&gt;LowCost(&lt;/LI&gt;&lt;LI&gt;Pickup&lt;/LI&gt;&lt;LI&gt;Other&lt;/LI&gt;&lt;LI&gt;None&lt;/LI&gt;&lt;/UL&gt;</td>
+      <td>Shippint type<br />SameDay<br />OneDay<br />TwoDay<br />ThreeDay<br />LowCost(<br />Pickup<br />Other<br />None&lt;/LI&gt;&lt;/UL&gt;</td>
       <td> </td>
     </tr>
     <tr>
