Ajuste no hotjar e hub

--- a/index.html
+++ b/index.html
@@ -31,13 +31,8 @@ title: Home
 
 <div class="dev-hub-title">
     <div class="dev-hub-info">
-        <h2>
-            Developer Hub
-        </h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla consequat est. 
-Vestibulum tempor pellentesque nibh, at bibendum massa. Vivamus velit urna, feugiat id dignissim.
-        </p>
+        <h2>{% t global.hub_title %}</h2>
+        <p>{% t global.hub_description %}</p>
     </div>
 </div>
 
