[95abd10309c721cfa9f57735fd81afaa3e6a65e2]: Ajuste no hotjar e hub

--- a/en/index.html
+++ b/en/index.html
@@ -82,13 +82,8 @@
 
 <div class="dev-hub-title">
     <div class="dev-hub-info">
-        <h2>
-            Developer Hub
-        </h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla consequat est. 
-Vestibulum tempor pellentesque nibh, at bibendum massa. Vivamus velit urna, feugiat id dignissim.
-        </p>
+        <h2>Cielo Developers</h2>
+        <p>Hub description</p>
     </div>
 </div>
 
@@ -155,6 +150,7 @@ Vestibulum tempor pellentesque nibh, at bibendum massa. Vivamus velit urna, feug
 </div>
 
     </div>
+
     <!-- Hotjar Tracking Code for https://developercielo.github.io/ -->
 <script>
     (function(h,o,t,j,a,r){
@@ -166,5 +162,6 @@ Vestibulum tempor pellentesque nibh, at bibendum massa. Vivamus velit urna, feug
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+
   </body>
 </html>
