[aa3ad4230fabca88b8bbad6132c5b995e3032366]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/teste">Manual de integração</a>
+                    <a href="https://developercielo.github.io/manual/teste">Integration Manual</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
