--- a/404.html
+++ b/404.html
@@ -175,7 +175,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/teste">Manual de integração</a>
+                    <a href="https://developercielo.github.io/manual/teste">Integration Manual</a>
                 </li>
             
             </ul>
