[87d6ab24cc8914d6486bf2bd7f335e084d30a659]: Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/manual/teste.html
+++ b/manual/teste.html
@@ -5762,7 +5762,7 @@
       <td>Codes that identifies the score level of an order</td>
       <td>Text</td>
       <td>100</td>
-      <td>Ex: B^D^R^Z<br />&lt;UL&gt;&lt;LI&gt;A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.&lt;/LI&gt;</td>
+      <td>Ex: B^D^R^Z<br /><br />A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.&lt;/LI&gt;</td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -10091,7 +10091,7 @@
       <td>Text</td>
       <td>10 </td>
       <td>No</td>
-      <td>Interval between recurrences<br />&lt;ul&gt;&lt;li&gt;Monthly (Default) &lt;/li&gt;&lt;li&gt;Bimonthly &lt;/li&gt;&lt;li&gt;Quarterly &lt;/li&gt;&lt;li&gt;SemiAnnual &lt;/li&gt;&lt;li&gt;Annual&lt;/li&gt;&lt;/ul&gt; </td>
+      <td>Interval between recurrences<br /> (Default) <br />Bimonthly <br />Quarterly <br />SemiAnnual <br />Annual<br /> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.RecurrentPayment.AuthorizeNow</code></td>
@@ -10318,7 +10318,7 @@
       <td>Recurrency Interval </td>
       <td>Text</td>
       <td>10 </td>
-      <td>&lt;ul&gt;&lt;li&gt;Monthly&lt;/li&gt;&lt;li&gt;Bimonthly &lt;/li&gt;&lt;li&gt;Quarterly &lt;/li&gt;&lt;li&gt;SemiAnnual &lt;/li&gt;&lt;li&gt;Annual&lt;/li&gt;&lt;/ul&gt; </td>
+      <td><br />Monthly<br />Bimonthly <br />Quarterly <br />SemiAnnual <br />Annual<br /> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizeNow</code></td>
@@ -10493,7 +10493,7 @@
       <td>Text</td>
       <td>10 </td>
       <td>No</td>
-      <td>Interval between recurrencies.<br />&lt;ul&gt;&lt;li&gt;Monthly (Default) &lt;/li&gt;&lt;li&gt;Bimonthly &lt;/li&gt;&lt;li&gt;Quarterly &lt;/li&gt;&lt;li&gt;SemiAnnual &lt;/li&gt;&lt;li&gt;Annual&lt;/li&gt;&lt;/ul&gt; </td>
+      <td>Interval between recurrencies.<br /> (Default) <br />Bimonthly <br />Quarterly <br />SemiAnnual <br />Annual<br /> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.RecurrentPayment.AuthorizeNow</code>Boolean </td>
@@ -10677,7 +10677,7 @@
       <td>Interval between recurrences </td>
       <td>Text</td>
       <td>10 </td>
-      <td>&lt;ul&gt;&lt;li&gt;Monthly&lt;/li&gt;&lt;li&gt;Bimonthly &lt;/li&gt;&lt;li&gt;Quarterly &lt;/li&gt;&lt;li&gt;SemiAnnual &lt;/li&gt;&lt;li&gt;Annual&lt;/li&gt;&lt;/ul&gt; </td>
+      <td><br />Monthly<br />Bimonthly <br />Quarterly <br />SemiAnnual <br />Annual<br /> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizeNow</code></td>
@@ -11134,7 +11134,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Interval</code></td>
-      <td>Interval between recurrencies. &lt;ul&gt;&lt;li&gt;Monthly&lt;/li&gt;&lt;li&gt;Bimonthly &lt;/li&gt;&lt;li&gt;Quarterly &lt;/li&gt;&lt;li&gt;SemiAnnual &lt;/li&gt;&lt;li&gt;Annual&lt;/li&gt;&lt;/ul&gt;</td>
+      <td>Interval between recurrencies. <br />Monthly<br />Bimonthly <br />Quarterly <br />SemiAnnual <br />Annual<br /></td>
       <td>Number</td>
       <td>2 </td>
       <td>Yes</td>
@@ -12605,7 +12605,7 @@ New Next scheduled recurrence date: Oct 2th <br />
       <td>Recurrence Status</td>
       <td>Number</td>
       <td>1 </td>
-      <td>&lt;UL&gt;&lt;LI&gt;1 - Active&lt;/LI&gt;&lt;LI&gt;2 - Finished&lt;/LI&gt;&lt;LI&gt;3,4,5 - Disabled&lt;/LI&gt;&lt;/UL&gt; </td>
+      <td><br />1 - Active<br />2 - Finished<br />3,4,5 - Disabled<br /> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">RecurrencyDay</code></td>
@@ -13884,7 +13884,7 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
   <tbody>
     <tr>
       <td>What is the difference between Status, ReasonCode and ProviderReturnCode?</td>
-      <td>The answer is:<br />&lt;UL&gt;&lt;LI&gt;Status: represents the current status of the transaction.&lt;/LI&gt;&lt;LI&gt;ReasonCode: represents the status of the request.&lt;/LI&gt;&lt;LI&gt;ProviderReturnCode: represents the response code from the acquirer or bank.&lt;/LI&gt;&lt;/UL&gt;For example, an authorization request may have a return with ReasonCode = 0 (Sucessfull), ie the request has been successfully completed, but the Status may be 0-Denied, for having the transaction not authorized by the buyer, ProviderReturnCode 57 (one of Cielo’s denied codes)</td>
+      <td>The answer is:<br /><br />Status: represents the current status of the transaction.<br />ReasonCode: represents the status of the request.<br />ProviderReturnCode: represents the response code from the acquirer or bank.<br />For example, an authorization request may have a return with ReasonCode = 0 (Sucessfull), ie the request has been successfully completed, but the Status may be 0-Denied, for having the transaction not authorized by the buyer, ProviderReturnCode 57 (one of Cielo’s denied codes)</td>
       <td>Integration</td>
     </tr>
   </tbody>
