[1f225ff89deedd132ce2a569e43ca5e3f278ee05]: Updated '_i18n/pt.yml' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="dev-hub-title">
     <div class="dev-hub-info">
         <h2>Cielo Developers</h2>
-        <p>Hub description</p>
+        <p>Portal de conteúdo Cielo. Documentos, artigos e tutoriais de todos os produtos Cielo estão disponíveis nesta página.</p>
     </div>
 </div>
 
