--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
 <div class="dev-hub-title">
     <div class="dev-hub-info">
         <h2>Cielo Developers</h2>
-        <p>Hub description</p>
+        <p>Documents, articles and tutorials of all Braspag products are available on this page</p>
     </div>
 </div>
 
