--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -557,37 +557,37 @@ Para a criação de um novo projeto no Android Studio, <a href="https://develope
 
 <p>Portanto, abaixo disponibilizamos algumas alternativas que podem a vir substituir a ausência desses recursos.</p>
 
-<table>
-  <thead>
-    <tr>
-      <th style="width:33%;">Push-Notifications</th>
-      <th style="width:33%;">Serviços de Localização (GPS)</th>
-      <th style="width:33%;">Serviços de Mapas</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
-      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
-      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
-    </tr>
-    <tr>
-      <td><strong>Alternativa</strong>: JobScheduler</td>
-      <td><strong>Alternativa</strong>: Location Manager</td>
-      <td><strong>Alternativa</strong>: MapBox</td>
-    </tr>
-    <tr style="vertical-align:top;">
-      <td><strong>Descrição</strong>: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend. O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).</td>
-      <td><strong>Descrição</strong>: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.</td>
-      <td><strong>Descrição</strong>: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.</td>
-    </tr>
-    <tr>
-      <td><strong>Referência</strong>: <a href="https://developer.android.com/reference/android/app/job/JobScheduler.html">Clique aqui</a></td>
-      <td><strong>Referência</strong>: <a href="https://developer.android.com/reference/android/location/LocationManager.html">Clique aqui</a></td>
-      <td><strong>Referência</strong>: <a href="https://www.mapbox.com">Clique aqui</a></td>
-    </tr>
-  </tbody>
-</table>
+<h3 id="push-notifications">Push-Notifications</h3>
+
+<p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+
+<p><strong>Alternativa</strong>: JobScheduler</p>
+
+<p><strong>Descrição</strong>: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend.</p>
+
+<p>O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).</p>
+
+<p>Referência: <a href="https://developer.android.com/reference/android/app/job/JobScheduler.html">Clique aqui</a></p>
+
+<h3 id="serviços-de-localização-gps">Serviços de Localização (GPS)</h3>
+
+<p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+
+<p><strong>Alternativa</strong>: Location Manager</p>
+
+<p><strong>Descrição</strong>: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.</p>
+
+<p>Referência: <a href="https://developer.android.com/reference/android/location/LocationManager.html">Clique aqui</a></p>
+
+<h3 id="serviços-de-mapas">Serviços de Mapas</h3>
+
+<p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+
+<p><strong>Alternativa</strong>: MapBox</p>
+
+<p><strong>Descrição</strong>: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.</p>
+
+<p>Referência: <a href="https://www.mapbox.com">Clique aqui</a></p>
 
 <p>Agora que você já tem as informações necessárias para desenvolver um aplicativo para, acesse a documentação da Integração Local para saber como se integrar com o SDK da Cielo LIO.</p>
 
