[dccc909b878cdf316e73719628f1f424c761f041]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2344,6 +2344,7 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
 
 <ul>
   <li>Geração de agenda</li>
+  <li>Pré-chargeback</li>
   <li>Chargeback</li>
   <li>Liquidação</li>
 </ul>
