[7473fda1967d8fbb2a14e46ecdd07febcb455e5c]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -109,7 +109,8 @@
 
 <h2 id="introdução">Introdução</h2>
 
-<p>O <strong>Split de Pagamentos</strong> permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
+<p><br />
+O <strong>Split de Pagamentos</strong> permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
 
 <p>Muito utilizado em Marketplaces, onde <strong>o carrinho é composto por produtos de diferentes fornecedores e o valor total da venda deve ser dividido entre todos os participantes</strong>.</p>
 
@@ -1660,7 +1661,7 @@ No Split de Pagamentos, o responsável por realizar o repasse dos valores (liqui
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AdjustmentCredit</code></td>
-      <td>Lançamento de um crédito como ajuste</td>
+      <td>Lançamento de um crédito como ajuste.</td>
     </tr>
   </tbody>
 </table>
