[d6e5a7848c53d498cbf1459de85ef538d7be715f]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2341,7 +2341,7 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
 <h2 id="notificação">Notificação</h2>
 
 <p><br />
-<strong>Em breve</strong> será disponibilizado o serviço de notificação que informará os eventos que ocorrem em uma transação de Split:</p>
+<strong>Em breve</strong> será disponibilizado o serviço de notificação que informará os eventos que ocorrerem em uma transação de Split:</p>
 
 <ul>
   <li>Geração de agenda</li>
