[c60ef0561dfe05e3f14e70a7be9f4611a2098867]: Plugin de conversão do Jekyll

--- a/faq/faq-webservice-1-5.html
+++ b/faq/faq-webservice-1-5.html
@@ -159,11 +159,11 @@
   <li>Posterior à autorização (captura total ou parcial).</li>
 </ul>
 
-<p>No primeiro caso, não é necessário enviar uma requisição de captura, pois ela é feita automaticamente pela Cielo após a autorização da transação. Para tanto, é preciso configurar a requisição de transação definindo-se o valor “true” para a TAG <capturar>, conforme visto na seção “Criando uma transação”.</capturar></p>
+<p>No primeiro caso, não é necessário enviar uma requisição de captura, pois ela é feita automaticamente pela Cielo após a autorização da transação. Para tanto, é preciso configurar a requisição de transação definindo-se o valor “true” para a TAG , conforme visto na seção “Criando uma transação”.</p>
 
 <p>Já no segundo caso, é preciso fazer uma “captura posterior”, através de uma nova requisição ao Webservice da Cielo para confirmar a transação e receber o valor da venda.</p>
 
-<aside class="warning"><strong>Atenção!</strong>: Na modalidade de débito não existe essa opção: toda transação de débito autorizada é capturada automaticamente.</aside>
+<aside class="warning">Atenção!: Na modalidade de débito não existe essa opção: toda transação de débito autorizada é capturada automaticamente.</aside>
 
 <h2 id="É-possível-cancelar-uma-transação">É possível cancelar uma transação?</h2>
 
