--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1206,7 +1206,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 <blockquote>
   <p>Endpoint:</p>
 
-  <p><strong>GET</strong> /orders<id></id></p>
+  <p><strong>GET</strong> /orders</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1434,7 +1434,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 <blockquote>
   <p>Endpoint:</p>
 
-  <p><strong>PUT</strong> /orders/<id>?operation=<operation></operation></id></p>
+  <p><strong>PUT</strong> /orders/?operation=</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1507,7 +1507,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
   <p>Endpoint:</p>
 
-  <p><strong>DELETE</strong> /orders/<id></id></p>
+  <p><strong>DELETE</strong> /orders/</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1574,7 +1574,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
   <p>Endpoint:</p>
 
-  <p><strong>POST</strong> /orders/<id>/items</id></p>
+  <p><strong>POST</strong> /orders//items</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1644,7 +1644,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 <blockquote>
   <p>Endpoint:</p>
 
-  <p><strong>GET</strong> /orders/<id>/items</id></p>
+  <p><strong>GET</strong> /orders//items</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1725,7 +1725,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
   <p>Endpoint:</p>
 
-  <p><strong>PUT</strong> /orders/<id>/items/<id_item></id_item></id></p>
+  <p><strong>PUT</strong> /orders//items/</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1802,7 +1802,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 
   <p>Endpoint:</p>
 
-  <p><strong>DELETE</strong> /orders/<id>/items/<id_item></id_item></id></p>
+  <p><strong>DELETE</strong> /orders//items/</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1872,7 +1872,7 @@ Ex.: À Vista, Parcelado, etc.</p>
 <blockquote>
   <p>Endpoint:</p>
 
-  <p><strong>POST</strong> /orders/<id>/transactions</id></p>
+  <p><strong>POST</strong> /orders//transactions</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -1964,7 +1964,7 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 <blockquote>
   <p>Endpoint:</p>
 
-  <p><strong>GET</strong> /orders/<id>/transactions</id></p>
+  <p><strong>GET</strong> /orders//transactions</p>
 </blockquote>
 
 <p>Dados de entrada:</p>
@@ -2064,7 +2064,7 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 <p>Requisição do Order Manager</p>
 
 <blockquote>
-  <p><strong>PUT</strong> <url_cadastrada_pelo_parceiro></url_cadastrada_pelo_parceiro></p>
+  <p><strong>PUT</strong></p>
 </blockquote>
 
 <p>Exemplo de informação enviada pelo Order Manager</p>
@@ -2087,7 +2087,7 @@ Em ambiente de produção, uma vez que um pagamento for realizado na Cielo LIO a
 <p>Requisição do Order Manager</p>
 
 <blockquote>
-  <p><strong>PUT</strong> <url_cadastrada_pelo_parceiro></url_cadastrada_pelo_parceiro></p>
+  <p><strong>PUT</strong></p>
 </blockquote>
 
 <p>Exemplo de informação enviada pelo Order Manager</p>
