--- a/tutorial/habilitacao-meios-de-pagamento.html
+++ b/tutorial/habilitacao-meios-de-pagamento.html
@@ -184,7 +184,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
 
 <p><img src="https://developercielo.github.io/images/boleto-bradesco-passo-2.png" alt="Boleto Bradesco" /></p>
 
-<aside class="notice"><strong>Obs:</strong> O vencimento deverá ser o mesmo configurado no Checkout Cielo.</aside>
+<aside class="notice">Obs: O vencimento deverá ser o mesmo configurado no Checkout Cielo.</aside>
 
 <ul>
   <li><strong>URL de notificação</strong>: https://www.pagador.com.br/post/BoletoBradescoSps/ReceivePost</li>
@@ -222,7 +222,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
 
 <p><img src="https://developercielo.github.io/images/boleto-bradesco-passo-4.png" alt="Boleto Bradesco" /></p>
 
-<aside class="notice"><strong>Obs:</strong> Não podem existir espaços ou quebras de texto nos parâmetros expostos acima.</aside>
+<aside class="notice">Obs: Não podem existir espaços ou quebras de texto nos parâmetros expostos acima.</aside>
 
 <p><strong>3.</strong> Clique no botão “<strong>Gravar todas as configurações realizadas</strong>”</p>
 
@@ -248,7 +248,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
   </li>
 </ul>
 
-<aside class="notice"><strong>Obs:</strong> A afiliação do Bradesco está localizada no topo do gerenciador web.</aside>
+<aside class="notice">Obs: A afiliação do Bradesco está localizada no topo do gerenciador web.</aside>
 
 <p><img src="https://developercielo.github.io/images/boleto-bradesco-passo-5.png" alt="Boleto Bradesco" /></p>
 
@@ -314,7 +314,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
     <ul>
       <li><strong>Para</strong>: <a href="mailto:homologacao@scopus.com.br">homologacao@scopus.com.br</a>; <a href="mailto:kit@scopus.com.br">kit@scopus.com.br</a></li>
       <li><strong>Assunto</strong>: Dados do ambiente de produção Débito SPS</li>
-      <li><strong>Corpo do email</strong>:<br />Prezados,<br /><br />Favor liberar o cliente abaixo no ambiente de produção:<br /><br />Razão Social: XXXXX<br />CNPJ: XXXX<br />Nome da loja: XXXXX<br />Número da loja: XXXXX<br />Manager: XXXXX<br />Senha: XXXXXXX<br />URL da Loja: https://www.XXXXXXXXX<br />Meio de Pagamento para Homologar: Débito em Conta<br /></li>
+      <li><strong>Corpo do email</strong>:Prezados,Favor liberar o cliente abaixo no ambiente de produção:Razão Social: XXXXXCNPJ: XXXXNome da loja: XXXXXNúmero da loja: XXXXXManager: XXXXXSenha: XXXXXXXURL da Loja: https://www.XXXXXXXXXMeio de Pagamento para Homologar: Débito em Conta</li>
     </ul>
   </li>
   <li>Receber os dados de produção:
