--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -129,7 +129,7 @@
 <p>Para utilizar o Postman, basta instalar o APP em seu computador. Isso pode ser realizado de duas maneiras:</p>
 
 <ul>
-  <li><strong>Instalando a versão desktop</strong>: Basta acessar <a href="https://www.getpostman.com/">https://www.getpostman.com/</a> , baixar a versão para sua plataforma e instalar o executável</li>
+  <li><strong>Instalando a versão desktop</strong>: Basta acessar  , baixar a versão para sua plataforma e instalar o executável</li>
   <li><strong>Instalando a extensão do Chrome</strong>: Basta acessar a Chrome Store e instalar a extensão do Postman</li>
 </ul>
 
@@ -248,7 +248,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <h3 id="api-cielo-ecommerce">Api Cielo Ecommerce</h3>
 
 <ul>
-  <li><strong>Collection</strong> -  <a href="https://www.getpostman.com/collections/139520c8fe2210654d7c">https://www.getpostman.com/collections/139520c8fe2210654d7c</a></li>
+  <li><strong>Collection</strong> -</li>
 </ul>
 
 <table>
@@ -261,11 +261,11 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
   <tbody>
     <tr>
       <td>Sandbox</td>
-      <td><strong>Envio de transação</strong>:  https://apisandbox.cieloecommerce.cielo.com.br <br /> <strong>Consulta transação</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/</td>
+      <td><strong>Envio de transação</strong>:  https://apisandbox.cieloecommerce.cielo.com.br  <strong>Consulta transação</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/</td>
     </tr>
     <tr>
       <td>Produção</td>
-      <td><strong>Envio de transação</strong>: https://api.cieloecommerce.cielo.com.br/ <br /> <strong>Consulta transação</strong>: https://apiquery.cieloecommerce.cielo.com.br/</td>
+      <td><strong>Envio de transação</strong>: https://api.cieloecommerce.cielo.com.br/  <strong>Consulta transação</strong>: https://apiquery.cieloecommerce.cielo.com.br/</td>
     </tr>
   </tbody>
 </table>
@@ -273,7 +273,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <h3 id="checkout-cielo">Checkout Cielo</h3>
 
 <ul>
-  <li><strong>Collection</strong>  -  <a href="https://www.getpostman.com/collections/97969ec643738aac42f4">https://www.getpostman.com/collections/97969ec643738aac42f4</a></li>
+  <li><strong>Collection</strong>  -</li>
 </ul>
 
 <table>
