--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -358,7 +358,7 @@ Caso uma transação não seja capturada dentro desse limite, ela deixa de ser v
   <li>Posterior à autorização (captura total ou parcial) - Já no segundo caso, é preciso fazer uma “captura posterior”, através de uma nova requisição ao Webservice da Cielo para confirmar a transação e receber o valor da venda.</li>
 </ol>
 
-<aside class="warning"><strong>Atenção!</strong><br /><br />Na modalidade de débito não existe a opção de captura. Toda transação de débito autorizada é capturada automaticamente.</aside>
+<aside class="warning">Atenção!Na modalidade de débito não existe a opção de captura. Toda transação de débito autorizada é capturada automaticamente.</aside>
 
 <h2 id="32-É-possível-cancelar-uma-transação">32. É possível cancelar uma transação?</h2>
 
@@ -399,8 +399,6 @@ Cada meio de pagamento possui diferentes status, podendo variar em relação a i
   <li>Zero Auth</li>
   <li>Consulta Bins</li>
 </ul>
-
-<p><br /></p>
 
 <p>Features Não Disponiveis em Sandbox:</p>
 
