--- a/tutorial/edi.html
+++ b/tutorial/edi.html
@@ -330,67 +330,10 @@
       <td>10</td>
       <td>N</td>
       <td>N.o da maquineta (contrato CIELO)</td>
-      <td>Campo Obrigatório. Rejeição se &lt; 0 ou não numérico</td>
-    </tr>
-    <tr>
-      <td>007</td>
-      <td>Código da moeda</td>
-      <td>41</td>
-      <td>3</td>
-      <td>N</td>
-      <td>“986” - R$, “840” - US$</td>
-      <td>Rejeitado se diferente de 986 ou 840</td>
-    </tr>
-    <tr>
-      <td>008</td>
-      <td>Indicador do processo</td>
-      <td>44</td>
-      <td>1</td>
-      <td>X</td>
-      <td>“P” – Produção</td>
-      <td>Rejeita se diferente de “P”</td>
-    </tr>
-    <tr>
-      <td>009</td>
-      <td>Indicador de venda</td>
-      <td>45</td>
-      <td>1</td>
-      <td>X</td>
-      <td>“V” – venda</td>
-      <td>Campo Obrigatório</td>
-    </tr>
-    <tr>
-      <td>010</td>
-      <td>Indicação de estabelecimento especial</td>
-      <td>46</td>
-      <td>01</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.</td>
-    </tr>
-    <tr>
-      <td>011</td>
-      <td>Não utilizar</td>
-      <td>47</td>
-      <td>204</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>não lido</td>
+      <td>Campo Obrigatório. Rejeição se  <strong>N</strong> = Numérico / <strong>X</strong> = Alfanumérico</td>
     </tr>
   </tbody>
 </table>
-
-<h4 id="legenda">Legenda</h4>
-
-<ul>
-  <li><strong>POS</strong> = Posição inicial do Campo no Arquivo;</li>
-  <li><strong>TAM</strong> = Tamanho do Campo</li>
-  <li><strong>FOR</strong> = Formatos válidos para o conteúdo do campo, sendo:</li>
-</ul>
-
-<blockquote>
-  <p><strong>N</strong> = Numérico / <strong>X</strong> = Alfanumérico</p>
-</blockquote>
 
 <h3 id="registro-detalhe">Registro Detalhe</h3>
 
@@ -762,6 +705,7 @@
       <th>FOR</th>
       <th>COMENTÁRIOS</th>
       <th>Consistências EDI</th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
@@ -773,6 +717,7 @@
       <td>N</td>
       <td>Identifica o tipo de registro header</td>
       <td>Obrigatoriamente deve ser “00”</td>
+      <td> </td>
     </tr>
     <tr>
       <td>002</td>
@@ -782,6 +727,7 @@
       <td>N</td>
       <td>Data de geração e transmissão do movimento</td>
       <td>Campo Obrigatório. Formato deve ser DDMMAAAA</td>
+      <td> </td>
     </tr>
     <tr>
       <td>003</td>
@@ -791,6 +737,7 @@
       <td>N</td>
       <td>Informado pelo estabelecimento, identifica o lote de transações.</td>
       <td>Campo Obrigatório. Não enviar o mesmo lote num período de 30 dias do envio anterior</td>
+      <td> </td>
     </tr>
     <tr>
       <td>004</td>
@@ -800,6 +747,7 @@
       <td>X</td>
       <td>Uso exclusivo do estabelecimento, não é utilizado pela CIELO</td>
       <td>Nenhuma verificação</td>
+      <td> </td>
     </tr>
     <tr>
       <td>005</td>
@@ -809,6 +757,7 @@
       <td>N</td>
       <td>Constante = Zeros</td>
       <td>Não lido</td>
+      <td> </td>
     </tr>
     <tr>
       <td>006</td>
@@ -817,132 +766,7 @@
       <td>10</td>
       <td>N</td>
       <td>N.º da maquineta (contrato CIELO)</td>
-      <td>Campo Obrigatório. Rejeitado se &lt; ou = 0 ou não numérico</td>
-    </tr>
-    <tr>
-      <td>007</td>
-      <td>Código da moeda</td>
-      <td>41</td>
-      <td>3</td>
-      <td>N</td>
-      <td>“986” - R$. “840” - US$</td>
-      <td>Rejeitado se diferente de 986 ou 840</td>
-    </tr>
-    <tr>
-      <td>008</td>
-      <td>Indicador do processo</td>
-      <td>44</td>
-      <td>1</td>
-      <td>X</td>
-      <td>“P” – Produção</td>
-      <td>Rejeita se diferente de “P”</td>
-    </tr>
-    <tr>
-      <td>009</td>
-      <td>Indicador de cancelamento de vendas</td>
-      <td>45</td>
-      <td>1</td>
-      <td>X</td>
-      <td>“C” – cancelamento de venda Credito à vista. “P” – cancelamento de venda Parcelado Loja. “D” – cancelamento de venda Débito</td>
-      <td>Se campo diferente de “C” ou “P” ou “D” o lote será recusado.</td>
-    </tr>
-    <tr>
-      <td>010</td>
-      <td>Indicação de estabelecimento especial</td>
-      <td>46</td>
-      <td>01</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.</td>
-    </tr>
-    <tr>
-      <td>011</td>
-      <td>Não utilizar</td>
-      <td>47</td>
-      <td>204</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Não lido</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="registro-detalhe-1">Registro Detalhe</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>SEQ</th>
-      <th>DESCRIÇÃO</th>
-      <th>POS</th>
-      <th>TAM</th>
-      <th>FOR</th>
-      <th>COMENTÁRIOS</th>
-      <th>Consistências EDI</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>001</td>
-      <td>Tipo de registro</td>
-      <td>1</td>
-      <td>2</td>
-      <td>N</td>
-      <td>Identifica o tipo de registro detalhe</td>
-      <td>Somente aceito se igual a “01”</td>
-    </tr>
-    <tr>
-      <td>002</td>
-      <td>Nº do comprovante de venda (CV)</td>
-      <td>3</td>
-      <td>7</td>
-      <td>N</td>
-      <td>É um número sequencial atribuído pelo estabelecimento, identifica a transação dentro do lote.</td>
-      <td>Campo Obrigatório; Deve ser numérico; Não pode estar duplicado no lote.</td>
-    </tr>
-    <tr>
-      <td>003</td>
-      <td>Número do cartão</td>
-      <td>10</td>
-      <td>19</td>
-      <td>N</td>
-      <td>Nº do cartão alinhado à direita, com zeros à esquerda</td>
-      <td>Campo Obrigatório; deve ter entre 16 a 19 dígitos.</td>
-    </tr>
-    <tr>
-      <td>004</td>
-      <td>Código de autorização</td>
-      <td>29</td>
-      <td>6</td>
-      <td>X</td>
-      <td>Preencher com o código de autorização da venda.</td>
-      <td>Campo Obrigatório</td>
-    </tr>
-    <tr>
-      <td>005</td>
-      <td>Data da venda</td>
-      <td>35</td>
-      <td>8</td>
-      <td>N</td>
-      <td>DDMMAAAA</td>
-      <td>Campo Obrigatório somente aceito o formato especificado</td>
-    </tr>
-    <tr>
-      <td>006</td>
-      <td>Opção da venda</td>
-      <td>43</td>
-      <td>1</td>
-      <td>N</td>
-      <td>‘0’ – À vista, ‘2’ - Parcelado lojista, ‘4’ – Parcelado lojista Cia. Aérea</td>
-      <td>Campo Obrigatório. Dentro de um mesmo lote todas as transações devem ter a mesma opção de venda</td>
-    </tr>
-    <tr>
-      <td>007</td>
-      <td>Valor da venda *</td>
-      <td>44</td>
-      <td>15</td>
-      <td>N</td>
-      <td>Venda vista =&gt; valor venda, Venda parcelada =&gt; somatória das parcelas e valor de entrada.</td>
+      <td>Campo Obrigatório. Rejeitado se  valor venda, Venda parcelada =&gt; somatória das parcelas e valor de entrada.</td>
       <td>Campo Obrigatório. Tem que respeitar a “opção de venda”</td>
     </tr>
     <tr>
@@ -953,6 +777,7 @@
       <td>N</td>
       <td>Venda à vista =&gt; preencher com zeros, Venda parcelada =&gt; quantidade de parcelas</td>
       <td>Campo Obrigatório. Tem que respeitar a “opção de venda”</td>
+      <td> </td>
     </tr>
     <tr>
       <td>009</td>
@@ -962,6 +787,7 @@
       <td>N</td>
       <td>Venda à vista =&gt; preencher com zeros, Venda parcelada =&gt; Valor original financiado</td>
       <td>Campo Obrigatório. Tem que respeitar a “opção de venda”</td>
+      <td> </td>
     </tr>
     <tr>
       <td>010</td>
@@ -971,6 +797,7 @@
       <td>N</td>
       <td>Venda à vista =&gt; preencher com zeros, Venda parcelada =&gt; Valor da entrada. <strong>Apenas Cias. Aéreas</strong></td>
       <td>Campo Obrigatório. Tem que respeitar a “opção de venda”</td>
+      <td> </td>
     </tr>
     <tr>
       <td>011</td>
@@ -980,6 +807,7 @@
       <td>N</td>
       <td>Preencher <strong>apenas para Cias. Aéras</strong>. Caso contrário preencher com zeros</td>
       <td>Rejeitado se diferente de zero ou não numérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td>012</td>
@@ -989,6 +817,7 @@
       <td>N</td>
       <td>Venda à vista =&gt; preencher com zeros, Venda parcelada =&gt; Valor da parcela (não fazer arredondamento)</td>
       <td>Campo Obrigatório. Tem que respeitar a “opção de venda“</td>
+      <td> </td>
     </tr>
     <tr>
       <td>013</td>
@@ -998,6 +827,7 @@
       <td>N</td>
       <td>Igual ao Nº do RO informado no registro header</td>
       <td>Obrigatório o uso do mesmo número do header</td>
+      <td> </td>
     </tr>
     <tr>
       <td>014</td>
@@ -1007,6 +837,7 @@
       <td>N</td>
       <td>Constante = zeros</td>
       <td>Não lido</td>
+      <td> </td>
     </tr>
     <tr>
       <td>015</td>
@@ -1016,6 +847,7 @@
       <td>N</td>
       <td>N.º da maquineta (contrato CIELO)</td>
       <td>Deverá ser o mesmo do header</td>
+      <td> </td>
     </tr>
     <tr>
       <td>016</td>
@@ -1025,6 +857,7 @@
       <td>X</td>
       <td>Uso exclusivo do estabelecimento, não é utilizado pela CIELO</td>
       <td>Sem verificações</td>
+      <td> </td>
     </tr>
     <tr>
       <td>017</td>
@@ -1034,6 +867,7 @@
       <td>N</td>
       <td>Na remessa preencher com zeros. No retorno, será formatado pela CIELO contendo status conforme tabela ANEXO I</td>
       <td>Sem verificações</td>
+      <td> </td>
     </tr>
     <tr>
       <td>018</td>
@@ -1043,6 +877,7 @@
       <td>N</td>
       <td>Na remessa preencher com zeros; No retorno, será formatado pela CIELO com a data prevista de liquidação.</td>
       <td>Não lido</td>
+      <td> </td>
     </tr>
     <tr>
       <td>019</td>
@@ -1052,6 +887,7 @@
       <td>X</td>
       <td>Formato = AAMM. Pode ser preenchido com zeros</td>
       <td>Sem verificações</td>
+      <td> </td>
     </tr>
     <tr>
       <td>020</td>
@@ -1060,156 +896,11 @@
       <td>7</td>
       <td>N</td>
       <td>Informar o número original do RO da venda</td>
-      <td>Campo Obrigatório. Rejeitado se &lt; ou = 0 ou não numérico</td>
-    </tr>
-    <tr>
-      <td>021</td>
-      <td>Valor do reembolso / cancelamento</td>
-      <td>193</td>
-      <td>15</td>
-      <td>N</td>
-      <td>Valor a ser reembolsado</td>
-      <td>Campo Obrigatório. Rejeitado se &lt; ou = 0 ou não numérico</td>
-    </tr>
-    <tr>
-      <td>022</td>
-      <td>Não utilizar</td>
-      <td>208</td>
-      <td>03</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>023</td>
-      <td>Código do Erro</td>
-      <td>211</td>
-      <td>04</td>
-      <td>X</td>
-      <td>No remessa preencher com brancos. No retorno, caso haja erro será retornado pela Cielo conforme ANEXO II</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>024</td>
-      <td>Número referência</td>
-      <td>215</td>
-      <td>11</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Deve ser brancos</td>
-    </tr>
-    <tr>
-      <td>025</td>
-      <td>Cartão Novo</td>
-      <td>226</td>
-      <td>19</td>
-      <td>X</td>
-      <td>Na remessa preencher com brancos. No retorno, caso tenha convênio “renova fácil” virá o número cartão alinhado a esquerda com brancos direita.</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>026</td>
-      <td>Vencto Novo</td>
-      <td>245</td>
-      <td>04</td>
-      <td>N</td>
-      <td>Na remessa preencher com brancos. No retorno, caso tenha convênio “renova fácil” virá a data do vencto. do cartão novo.</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>027</td>
-      <td>Não utilizar</td>
-      <td>249</td>
-      <td>02</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Não lido</td>
+      <td>Campo Obrigatório. Rejeitado se ( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.&lt;/aside&gt;</td>
+      <td> </td>
     </tr>
   </tbody>
 </table>
-
-<h3 id="registro-trailler-1">Registro Trailler</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>SEQ</th>
-      <th>DESCRIÇÃO</th>
-      <th>POS</th>
-      <th>TAM</th>
-      <th>FOR</th>
-      <th>COMENTÁRIOS</th>
-      <th>Consistências EDI</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>001</td>
-      <td>Tipo de registro</td>
-      <td>1</td>
-      <td>2</td>
-      <td>N</td>
-      <td>Identifica o tipo de registro detalhe trailler</td>
-      <td>Obrigatório o uso do código “99”</td>
-    </tr>
-    <tr>
-      <td>002</td>
-      <td>Quantidade de registros</td>
-      <td>3</td>
-      <td>7</td>
-      <td>N</td>
-      <td>Inclusive header e trailler</td>
-      <td>Rejeição se menor que 0 ou não numérico</td>
-    </tr>
-    <tr>
-      <td>003</td>
-      <td>Valor total bruto (*)</td>
-      <td>10</td>
-      <td>15</td>
-      <td>N</td>
-      <td>Informado pelo estabelecimento – valor total do lote, somatória do campo 007 do registro detalhe</td>
-      <td>Rejeição se menor que 0 ou não numérico. Rejeita se valor diferente da somatória do campo 07</td>
-    </tr>
-    <tr>
-      <td>004</td>
-      <td>Valor total aceito (*)</td>
-      <td>25</td>
-      <td>15</td>
-      <td>N</td>
-      <td>Na remessa preencher com zeros; No retorno, será formatado na Cielo com valor total aceito.</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>005</td>
-      <td>Valor total liquido (*)</td>
-      <td>40</td>
-      <td>15</td>
-      <td>N</td>
-      <td>Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total líquido.</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>006</td>
-      <td>Data prevista de crédito</td>
-      <td>55</td>
-      <td>8</td>
-      <td>N</td>
-      <td>Na remessa preencher com zeros; No retorno, será formatado pela Cielo com a data prevista de pagamento.</td>
-      <td>Sem verificações</td>
-    </tr>
-    <tr>
-      <td>007</td>
-      <td>Não utilizar</td>
-      <td>63</td>
-      <td>188</td>
-      <td>X</td>
-      <td>Constante = brancos</td>
-      <td>Não lido</td>
-    </tr>
-  </tbody>
-</table>
-
-<aside class="notice">( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.</aside>
 
 <h1 id="regras---cancelamento-de-vendas">Regras - cancelamento de vendas</h1>
 
