--- a/tutorial/tutoriais-3-0.html
+++ b/tutorial/tutoriais-3-0.html
@@ -148,7 +148,7 @@
 
 <p><img src="https://developercielo.github.io/images/i45.png" alt="Desenvolvedor" /></p>
 
-<p>Você será redirecionado para <a href="https://www.cielo.com.br/desenvolvedores/">https://www.cielo.com.br/desenvolvedores/</a></p>
+<p>Você será redirecionado para</p>
 
 <h2 id="pesquisando-e-editando-transações">Pesquisando e editando transações</h2>
 
@@ -222,7 +222,7 @@
     </tr>
     <tr>
       <td>Status da Transação</td>
-      <td><strong>Cancelado</strong> - Transação cancelada pelo lojista<br /><strong>Estornado</strong> - Transações canceladas com menos de 24 horas<br /><strong>Não Autorizado</strong> - Transações negadas pelo Autorizador Cielo<br /><strong>Não Pago</strong> - Transações autorizadas, mas não capturadas<br /><strong>Pago</strong> - Transações capturadas<br /></td>
+      <td><strong>Cancelado</strong> - Transação cancelada pelo lojista<strong>Estornado</strong> - Transações canceladas com menos de 24 horas<strong>Não Autorizado</strong> - Transações negadas pelo Autorizador Cielo<strong>Não Pago</strong> - Transações autorizadas, mas não capturadas<strong>Pago</strong> - Transações capturadas</td>
       <td> </td>
     </tr>
   </tbody>
