[310c94dcdd0e76f6670a67b1e30e0b17dbca9fe3]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2295,6 +2295,10 @@ grant_type=client_credentials
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
+<blockquote>
+  <p>O Marketplace tem 1 dia, contado a partir da data de efetivação do chargeback, para informar como deseja repassar os débito aos subordinados.</p>
+</blockquote>
+
 <table>
   <thead>
     <tr>
