--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <link rel="shortcut icon" href="https://developercielo.github.io/assets/favicon.ico">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
-    <script src="https://use.fontawesome.com/3ae06f1030.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <script async src="https://use.fontawesome.com/3ae06f1030.js"></script>
+
     <link rel="stylesheet" href="https://developercielo.github.io/assets/css/poole.css">
     <link rel="stylesheet" href="https://developercielo.github.io/assets/css/syntax.css">
     <link rel="stylesheet" href="https://developercielo.github.io/assets/css/hyde.css">
