[ad00857013a06446afd994644e775bd963348e83]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2297,7 +2297,7 @@ grant_type=client_credentials
 </span></code></pre></div></div>
 
 <blockquote>
-  <p>O Marketplace tem 1 dia, contado a partir da data de efetivação do chargeback, para informar como deseja repassar os débito aos subordinados.</p>
+  <p>O Marketplace tem 1 dia, contado a partir da data de efetivação do chargeback, para informar como deseja repassar os valores aos subordinados.</p>
 </blockquote>
 
 <table>
